--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </a>
 
       <nav>
-        <ul>
+        <ul class="up-navigation">
           <li><a class="up-studio" href="studio.html">Studio</a></li>
           <li>
             <a class="up-portofolio" href="portofolio.html">Portofolio</a>
@@ -163,7 +163,7 @@
           </a>
         </li>
       </ul>
-      <address>
+      <address class="info">
         <ul>
           <li>
             <p class="down-address"><b>695 Park Ave, NY 10065, USA</b></p>
