--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </a>
 
       <nav>
-        <ul class="up-navigation">
+        <ul>
           <li><a class="up-studio" href="studio.html">Studio</a></li>
           <li>
             <a class="up-portofolio" href="portofolio.html">Portofolio</a>
@@ -153,7 +153,7 @@
     <footer>
       <ul>
         <li>
-          <a class="down-webstudio" href="index.html">
+          <a class="down-web-studio-logo" href="index.html">
             <img
               src="images/logo.svg"
               alt="WebStudio logo"
